fix rate bar (text now readable)

--- a/GameData/Skins/default/raindrop.css
+++ b/GameData/Skins/default/raindrop.css
@@ -36,7 +36,6 @@ input.checkbox:checked:hover
 }
 
 input.text {
-	padding: 10px 10px 10px;
 	background: black;
 }
 
